tests/transpiler/x/hs/str_builtin.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:35:01 GMT+7
main :: IO ()
main = do
    print (str 123)
